@@ -1,0 +1,1 @@
+RAYLIB_MODELS_PATH = "../raylib_dll/raylib/examples/models/"
